experimental/ir/testdata/editions/lifetime.proto.stderr.txt
error: `b` is not supported in Edition 2023
  --> testdata/editions/lifetime.proto:21:33
   |
15 | edition = "2023";
   |           ------ edition specified here
...
21 | option features.(x) = {a: true, b: true, c: true, d: true};
   |                                 ^
   = help: deprecated since Edition 2023, removed in "<unknown>"
   = help: deprecated: This is a bad feature. Don't use it.

error: `c` is not supported in Edition 2023
  --> testdata/editions/lifetime.proto:21:42
   |
15 | edition = "2023";
   |           ------ edition specified here
...
21 | option features.(x) = {a: true, b: true, c: true, d: true};
   |                                          ^
   = help: deprecated since "<unknown>", removed in Edition 2023

error: `d` is not supported in Edition 2023
  --> testdata/editions/lifetime.proto:21:51
   |
15 | edition = "2023";
   |           ------ edition specified here
...
21 | option features.(x) = {a: true, b: true, c: true, d: true};
   |                                                   ^
   = help: `d` requires at least Edition 2024

encountered 3 errors
